--- a/.github/workflows/generic-docker-workflow.yml
+++ b/.github/workflows/generic-docker-workflow.yml
@@ -39,26 +39,18 @@ jobs:
 
       - name: Ruff check with reviewdog
         run: |
-          REPORTER="github-pr-review"
-          if [ "${{ github.event_name }}" != "pull_request" ]; then
-            REPORTER="github-check"
-          fi
           ruff check src tests | ./bin/reviewdog -efm="%f:%l:%c: %m" \
             -name="ruff check" \
-            -reporter="$REPORTER" \
+            -reporter=github-pr-review \
             -level=error
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Ruff format check with reviewdog
         run: |
-          REPORTER="github-pr-review"
-          if [ "${{ github.event_name }}" != "pull_request" ]; then
-            REPORTER="github-check"
-          fi
           ruff format --check src tests | ./bin/reviewdog -efm="%f:%l:%c: %m" \
             -name="ruff format" \
-            -reporter="$REPORTER" \
+            -reporter=github-pr-review \
             -level=warning
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
